[package]
name = "rust_lib_aria"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
aiscript = { git = "https://github.com/poppingmoon/aiscript-rs", rev = "8d9f14d6b0ec85b73640d3695a4b395bf93bd993" }
flutter_rust_bridge = "=2.13.0-beta.5"
futures = "0.3"
indexmap = "2.3"
nom = "8.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1.10", features = ["v4"] }
