[package]
name = "rust_lib_aria"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
aiscript = { git = "https://github.com/poppingmoon/aiscript-rs", rev = "4e226c688658bb9557054b2379bc50034c4d04bd" }
flutter_rust_bridge = "=2.13.0-beta.5"
futures = "0.3"
indexmap = "2.3"
nom = "8.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1.10", features = ["v4"] }
